fix: Make it possible to click on the video on small screens so that it's playable on the phone

--- a/client/app/elements/video-player/video-player.scss
+++ b/client/app/elements/video-player/video-player.scss
@@ -49,8 +49,8 @@ $transition-duration: 0.3s;
 
 #player {
   position: absolute;
-  top: 0;
   left: 0;
+  bottom: 0;
   width: 100%;
   height: 100%;
 
@@ -122,6 +122,11 @@ paper-slider::shadow {
 }
 
 @media (max-width: 600px) {
+  .video[fullscreen] {
+    #player {
+      height: 40px;
+    }
+  }
   .video:not([fullscreen]) {
     #controls {
       display: none;
